--- a/templates/index.html
+++ b/templates/index.html
@@ -38,92 +38,114 @@
     </nav>
 
     <!-- FORMS -->
+    <form>
+        <!-- MOBAR -->
+        <div>
+            <h2>MOBAR</h2>
+        </div>
 
-    <!-- MOBAR -->
-    <div>
-        <h2>MOBAR</h2>
-    </div>
+        <div class="mb-3">
+            <label for="MOBAR_number_input" class="form-label">Enter MOBAR Number:</label>
+            <input type="text" class="form-control" name="MOBAR_Number" id="MOBAR_number_input" placeholder="12345">
+        </div>
 
-    <div class="mb-3">
-        <label for="MOBAR_number_input" class="form-label">Enter MOBAR Number:</label>
-        <input type="text" class="form-control" id="MOBAR_number_input" placeholder="12345">
-    </div>
+        <!-- Dates -->
+        <div>
+            <h2>Date Range</h2>
+        </div>
+        <div class="mb-3">
+            <label for="start_date">Start date:</label>
+            <input name="start_date" type="date" id="start_date">
+        </div>
 
-    <!-- Dates -->
-    <div>
-        <h2>Date Range</h2>
-    </div>
-    <div class="mb-3">
-        <label for="start_date">Start date:</label>
-        <input type="date" id="start_date">
-    </div>
+        <div class="mb-3">
+            <label for="end_date">End date:</label>
+            <input name="end_date" type="date" id="end_date">
+        </div>
 
-    <div class="mb-3">
-        <label for="end_date">End date:</label>
-        <input type="date" id="end_date">
-    </div>
+        <!-- Districts -->
+        <div>
+            <h2>Districts</h2>
+        </div>
 
-    <!-- Districts -->
-    <div>
-        <h2>Districts</h2>
-    </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT11" id="CT11">
+            <label class="form-check-label" for="CT11">
+                11th Judicial District (Saint Charles County)
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT13" id="CT13">
+            <label class="form-check-label" for="CT13">
+                13th Judicial Circuit (Boone & Callaway Counties)
+            </label>
+            <ul class="CT13_counties hide">
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="BNE" id="BNE">Boone</label></li>
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="CWY" id="CWY">Callaway</label></li>
+            </ul>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT20" id="CT20">
+            <label class="form-check-label" for="CT20">
+                20th Judicial Circuit (Franklin, Gasconade & Osage Counties)
+            </label>
+            <ul class="CT20_counties hide">
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="FKN" id="FKN">Franklin</label></li>
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="GAS" id="GAS">Gasconade</label></li>
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="OSG" id="OSG">Osage</label></li>
+            </ul>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT21" id="CT21">
+            <label class="form-check-label" for="CT21">
+                21st Judicial Circuit (St. Louis County)
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT22" id="CT22">
+            <label class="form-check-label" for="CT22">
+                22nd Judicial Circuit (City of St. Louis)
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT23" id="CT23">
+            <label class="form-check-label" for="CT23">
+                23rd Judicial Circuit (Jefferson County)
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="CT45" id="CT45">
+            <label class="form-check-label" for="CT45">
+                45th Judicial Circuit (Lincoln & Pike Counties)
+            </label>
+            <ul class="CT45_counties hide">
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="LCN" id="LCN">Lincoln</label></li>
+                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="PIK" id="PIK">Pike</label></li>
+            </ul>
+        </div>
 
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT11">
-        <label class="form-check-label" for="CT11">
-            11th Judicial District (Saint Charles County)
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT13">
-        <label class="form-check-label" for="CT13">
-            13th Judicial Circuit (Boone & Callaway Counties)
-        </label>
-        <ul class="CT13_counties hide">
-            <li><label><input type="checkbox" class="form-check-input" id="BNE">Boone</label></li>
-            <li><label><input type="checkbox" class="form-check-input" id="CWY">Callaway</label></li>
-        </ul>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT20">
-        <label class="form-check-label" for="CT20">
-            20th Judicial Circuit (Franklin, Gasconade & Osage Counties)
-        </label>
-        <ul class="CT20_counties hide">
-            <li><label><input type="checkbox" class="form-check-input" id="FKN">Franklin</label></li>
-            <li><label><input type="checkbox" class="form-check-input" id="GAS">Gasconade</label></li>
-            <li><label><input type="checkbox" class="form-check-input" id="OSG">Osage</label></li>
-        </ul>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT21">
-        <label class="form-check-label" for="CT21">
-            21st Judicial Circuit (St. Louis County)
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT22">
-        <label class="form-check-label" for="CT22">
-            22nd Judicial Circuit (City of St. Louis)
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT23">
-        <label class="form-check-label" for="CT23">
-            23rd Judicial Circuit (Jefferson County)
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="CT45">
-        <label class="form-check-label" for="CT45">
-            45th Judicial Circuit (Lincoln & Pike Counties)
-        </label>
-        <ul class="CT45_counties hide">
-            <li><label><input type="checkbox" class="form-check-input" id="LCN">Lincoln</label></li>
-            <li><label><input type="checkbox" class="form-check-input" id="PIK">Pike</label></li>
-        </ul>
-    </div>
+        <button type="submit">Submit</button>
+    </form>
 
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault();
+
+            const data = new FormData(event.target);
+
+            const value = Object.fromEntries(data.entries());
+
+            // value.dates = data.getAll("date");
+            value.counties = data.getAll("checkbox");
+
+            console.log({
+                value
+            });
+        }
+
+        const form = document.querySelector('form');
+        form.addEventListener('submit', handleSubmit);
+    </script>
     <script>
         document.getElementById('CT13').onchange = function () {
             var cart = document.getElementsByClassName('CT13_counties')[0];
