--- a/templates/index.html
+++ b/templates/index.html
@@ -127,42 +127,7 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script>
-        function handleSubmit(event) {
-            event.preventDefault();
-
-            const data = new FormData(event.target);
-
-            const value = Object.fromEntries(data.entries());
-
-            // value.dates = data.getAll("date");
-            value.counties = data.getAll("checkbox");
-
-            console.log({
-                value
-            });
-        }
-
-        const form = document.querySelector('form');
-        form.addEventListener('submit', handleSubmit);
-    </script>
-    <script>
-        document.getElementById('CT13').onchange = function () {
-            var cart = document.getElementsByClassName('CT13_counties')[0];
-            if (this.checked) cart.classList.remove('hide');
-            else cart.classList.add('hide');
-        }
-        document.getElementById('CT20').onchange = function () {
-            var cart = document.getElementsByClassName('CT20_counties')[0];
-            if (this.checked) cart.classList.remove('hide');
-            else cart.classList.add('hide');
-        }
-        document.getElementById('CT45').onchange = function () {
-            var cart = document.getElementsByClassName('CT45_counties')[0];
-            if (this.checked) cart.classList.remove('hide');
-            else cart.classList.add('hide');
-        }
-    </script>
+    <script type="text/javascript" src="../static/js/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
