--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
             </ul>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT20" id="CT20">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="SMPDB0004_CT20" id="CT20">
             <label class="form-check-label" for="CT20">
                 20th Judicial Circuit (Franklin, Gasconade & Osage Counties)
             </label>
@@ -114,7 +114,7 @@
             </label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT45" id="CT45">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="SMPDB0005_CT45" id="CT45">
             <label class="form-check-label" for="CT45">
                 45th Judicial Circuit (Lincoln & Pike Counties)
             </label>
