added loading icon while waiting for app to finish

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,17 +27,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h1>WE MADE IT SOMEWHERE</h1>
+    <h1>ABOUT PAGE</h1>
 
     <script type="text/javascript" src="../static/js/index.js"></script>
 
