--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
 .hide{
     display: none;
 }
+
+div#loading {
+    width: 35px;
+    height: 35px;
+    background-image: url("../images/loading_gif.gif");
+    background-repeat: no-repeat;
+    cursor: wait;
+}
