--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
             </div>
@@ -124,7 +124,9 @@
             </ul>
         </div>
 
-        <button type="submit">Submit</button>
+        <div class="hide" id="loading" name="loading"></div>
+        <button type="submit" id="submit_button" name="submit_button">Submit</button>
+        
     </form>
 
     <script type="text/javascript" src="../static/js/index.js"></script>
