--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -18,7 +18,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Missouri Courts Auto-Scheduler</a>
+            <a class="navbar-brand" href="/">Missouri Courts Auto-Scheduler</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,9 +27,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
@@ -37,7 +34,13 @@
         </div>
     </nav>
 
-    <h1>WE MADE IT SOMEWHERE</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h1>Scheduling Completed.</h1>
+            <p>The events have been added to your Google Calendar.</p>
+        </div>
+    </div>
+    
 
     <script type="text/javascript" src="../static/js/index.js"></script>
 
