--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Missouri Courts Auto-Scheduler</a>
+            <a class="navbar-brand" href="/">Missouri Courts Auto-Scheduler</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,108 +27,138 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="row justify-content-center " id="background-row">
+            <div class="col-md-6 h-100" id="background-container">
+                <!-- FORMS -->
+                <form>
+                    <div class="row justify-content-center" id="mobar-group">
+                        <!-- MOBAR -->
+                        <div class="col-md-12">
+                            <h2>MOBAR</h2>
+                        </div>
 
-    <!-- FORMS -->
-    <form>
-        <!-- MOBAR -->
-        <div>
-            <h2>MOBAR</h2>
-        </div>
+                        <div class="row justify-content-center" id="mobar-input-row">
+                            <div class="col-md-12">
+                                <label for="MOBAR_number_input" class="form-label">Enter MOBAR #:</label>
+                                <input type="text" maxlength="5" size="5" class="form-control" name="MOBAR_Number"
+                                    id="MOBAR_number_input" placeholder="12345">
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="mb-3">
-            <label for="MOBAR_number_input" class="form-label">Enter MOBAR Number:</label>
-            <input type="text" class="form-control" name="MOBAR_Number" id="MOBAR_number_input" placeholder="12345">
-        </div>
+                    <div class="row justify-content-center" id="date-group">
+                        <!-- Dates -->
+                        <div class="col-md-12">
+                            <h2>Date Range</h2>
+                        </div>
 
-        <!-- Dates -->
-        <div>
-            <h2>Date Range</h2>
-        </div>
-        <div class="mb-3">
-            <label for="start_date">Start date:</label>
-            <input name="start_date" type="date" id="start_date">
-        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-md-6">
+                                <label for="start_date">Start date:</label>
+                                <input name="start_date" type="date" id="start_date">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="end_date">End date:</label>
+                                <input name="end_date" type="date" id="end_date">
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="mb-3">
-            <label for="end_date">End date:</label>
-            <input name="end_date" type="date" id="end_date">
+                    <div class="row justify-content-center" id="districts-group">
+                        <!-- Districts -->
+                        <div class="col-md-12">
+                            <h2>Districts</h2>
+                        </div>
+                        <div class="row justify-content-center" id="districts-row">
+                            <div class="col-md-12" id="district-checkboxes">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox" value="CT11"
+                                        id="CT11">
+                                    <label class="form-check-label" for="CT11">
+                                        11th Judicial District (Saint Charles County)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox" value="CT13"
+                                        id="CT13">
+                                    <label class="form-check-label" for="CT13">
+                                        13th Judicial Circuit (Boone & Callaway Counties)
+                                    </label>
+                                    <ul class="CT13_counties hide">
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="BNE" id="BNE">Boone</label></li>
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="CWY" id="CWY">Callaway</label></li>
+                                    </ul>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox"
+                                        value="SMPDB0004_CT20" id="CT20">
+                                    <label class="form-check-label" for="CT20">
+                                        20th Judicial Circuit (Franklin, Gasconade & Osage Counties)
+                                    </label>
+                                    <ul class="CT20_counties hide">
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="FKN" id="FKN">Franklin</label></li>
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="GAS" id="GAS">Gasconade</label></li>
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="OSG" id="OSG">Osage</label></li>
+                                    </ul>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox" value="CT21"
+                                        id="CT21">
+                                    <label class="form-check-label" for="CT21">
+                                        21st Judicial Circuit (St. Louis County)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox" value="CT22"
+                                        id="CT22">
+                                    <label class="form-check-label" for="CT22">
+                                        22nd Judicial Circuit (City of St. Louis)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox" value="CT23"
+                                        id="CT23">
+                                    <label class="form-check-label" for="CT23">
+                                        23rd Judicial Circuit (Jefferson County)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="checkbox"
+                                        value="SMPDB0005_CT45" id="CT45">
+                                    <label class="form-check-label" for="CT45">
+                                        45th Judicial Circuit (Lincoln & Pike Counties)
+                                    </label>
+                                    <ul class="CT45_counties hide">
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="LCN" id="LCN">Lincoln</label></li>
+                                        <li><label><input type="checkbox" class="form-check-input" name="checkbox"
+                                                    value="PIK" id="PIK">Pike</label></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="hide" id="loading" name="loading"></div>
+                        <p class="hide" id="loading-label" name="loading-label">Loading... This may take several minutes.</p>
+                        <button type="submit" id="submit_button" name="submit_button">Submit</button>
+                    </div>
+                </form>
+            </div>
         </div>
-
-        <!-- Districts -->
-        <div>
-            <h2>Districts</h2>
-        </div>
-
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT11" id="CT11">
-            <label class="form-check-label" for="CT11">
-                11th Judicial District (Saint Charles County)
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT13" id="CT13">
-            <label class="form-check-label" for="CT13">
-                13th Judicial Circuit (Boone & Callaway Counties)
-            </label>
-            <ul class="CT13_counties hide">
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="BNE" id="BNE">Boone</label></li>
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="CWY" id="CWY">Callaway</label></li>
-            </ul>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="SMPDB0004_CT20" id="CT20">
-            <label class="form-check-label" for="CT20">
-                20th Judicial Circuit (Franklin, Gasconade & Osage Counties)
-            </label>
-            <ul class="CT20_counties hide">
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="FKN" id="FKN">Franklin</label></li>
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="GAS" id="GAS">Gasconade</label></li>
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="OSG" id="OSG">Osage</label></li>
-            </ul>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT21" id="CT21">
-            <label class="form-check-label" for="CT21">
-                21st Judicial Circuit (St. Louis County)
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT22" id="CT22">
-            <label class="form-check-label" for="CT22">
-                22nd Judicial Circuit (City of St. Louis)
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="CT23" id="CT23">
-            <label class="form-check-label" for="CT23">
-                23rd Judicial Circuit (Jefferson County)
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="SMPDB0005_CT45" id="CT45">
-            <label class="form-check-label" for="CT45">
-                45th Judicial Circuit (Lincoln & Pike Counties)
-            </label>
-            <ul class="CT45_counties hide">
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="LCN" id="LCN">Lincoln</label></li>
-                <li><label><input type="checkbox" class="form-check-input" name="checkbox" value="PIK" id="PIK">Pike</label></li>
-            </ul>
-        </div>
-
-        <div class="hide" id="loading" name="loading"></div>
-        <button type="submit" id="submit_button" name="submit_button">Submit</button>
-        
-    </form>
-
+    </div>
     <script type="text/javascript" src="../static/js/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
