improved error handling

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -34,10 +34,11 @@
         </div>
     </nav>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" id="confirmation">
         <div class="col-md-6">
             <h1>Scheduling Completed.</h1>
             <p>The events have been added to your Google Calendar.</p>
+            <a href="/">Return to main page.</a>
         </div>
     </div>
     
