--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         <div class="row justify-content-center " id="background-row">
             <div class="col-md-6 h-100" id="background-container">
                 <!-- FORMS -->
-                <form>
+                <form name="search_info_form" id="search_info_form">
                     <div class="row justify-content-center" id="mobar-group">
                         <!-- MOBAR -->
                         <div class="col-md-12">
@@ -49,6 +49,9 @@
                                 <label for="MOBAR_number_input" class="form-label">Enter MOBAR #:</label>
                                 <input type="text" maxlength="5" size="5" class="form-control" name="MOBAR_Number"
                                     id="MOBAR_number_input" placeholder="12345">
+                                <span class="error">
+                                    <p id="mobar_error"></p>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -63,10 +66,16 @@
                             <div class="col-md-6">
                                 <label for="start_date">Start date:</label>
                                 <input name="start_date" type="date" id="start_date">
+                                <span class="error">
+                                    <p id="start_date_error"></p>
+                                </span>
                             </div>
                             <div class="col-md-6">
                                 <label for="end_date">End date:</label>
                                 <input name="end_date" type="date" id="end_date">
+                                <span class="error">
+                                    <p id="end_date_error"></p>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -75,6 +84,9 @@
                         <!-- Districts -->
                         <div class="col-md-12">
                             <h2>Districts</h2>
+                            <span class="error">
+                                <p id="districts_error"></p>
+                            </span>
                         </div>
                         <div class="row justify-content-center" id="districts-row">
                             <div class="col-md-12" id="district-checkboxes">
@@ -152,7 +164,8 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="hide" id="loading" name="loading"></div>
-                        <p class="hide" id="loading-label" name="loading-label">Loading... This may take several minutes.</p>
+                        <p class="hide" id="loading-label" name="loading-label">Loading... This may take several
+                            minutes.</p>
                         <button type="submit" id="submit_button" name="submit_button">Submit</button>
                     </div>
                 </form>
