improved error handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
                                 <p id="districts_error"></p>
                             </span>
                         </div>
-                        <div class="row justify-content-center" id="districts-row">
+                        <div class="row justify-content-center overflow-auto" id="districts-row">
                             <div class="col-md-12" id="district-checkboxes">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="checkbox" value="CT11"
